<resources>
    <string name="app_name">StartupGang</string>
    <string name="startup_gang">Startup Gang</string>
    <string name="project_name">Project Name</string>
    <string name="industry">產業別</string>
    <string name="projectName">計畫名稱</string>
    <string name="searching_position">職缺</string>
    <string name="description">說明</string>
    <string name="subbmit">提交</string>
    <string name="search_by_keyword">關鍵字搜尋</string>
    <string name="search_by_position">職缺搜尋</string>
    <string name="match_my_schedule">符合我的行程</string>
    <string name="search">搜尋</string>
    <string name="apply">申請加入</string>
    <string name="team_icon">Team icon</string>
    <string name="following">關注列表</string>
    <string name="new_posts">最新動態</string>
    <string name="team_name">團隊名稱</string>
    <string name="user_name">用戶名稱</string>
    <string name="position">職稱</string>
    <string name="achievements">經歷</string>
    <string name="check_achievements">查看經歷</string>
    <string name="follow_status">關注狀態</string>
    <string name="post_new">發文</string>
    <string name="team_updates">團隊動態</string>
    <string name="project_name_cn">案件名稱</string>
    <string name="project_updates">案件動態</string>
    <string name="status_update">狀態更新</string>
    <string name="send_message">傳訊息</string>
    <string name="message">訊息</string>
    <string name="time">時間</string>
    <string name="task_name">任務名稱</string>
    <string name="enter_message">輸入訊息...</string>
    <string name="send">送出</string>
    <string name="start_startup">我要提案</string>
    <string name="search_filter">條件檢索</string>
    <string name="check_info">查看資料</string>
    <string name="follow">加關注</string>
    <string name="post_time">發文時間</string>
    <string name="preparing_progress">準備進度</string>
    <string name="progress">進度</string>
    <string name="leader">隊長</string>
    <string name="team_member_count">團隊規模</string>
    <string name="start_time">開始時間</string>
    <string name="end_time">結束時間</string>
    <string name="item">項次</string>
    <string name="todo_list">待辦事項</string>
    <string name="todo_name">待辦事項</string>
    <string name="member">成員</string>
    <string name="supervisor">負責人</string>
    <string name="hiring_position">職缺</string>
    <string name="must">必須</string>
    <string name="add_task">新增任務</string>
    <string name="cancel">取消</string>
    <string name="addTodo">新增細項</string>
    <string name="create">建立</string>
    <string name="do_follow">+關注</string>
    <string name="achievement">成就一覽</string>
    <string name="chat">聊天</string>
    <string name="change">更動</string>
    <string name="add_team">新增團隊</string>
    <string name="positoin">擔任職務</string>
    <string name="finish_date">完成時間</string>
    <string name="friend_list">好友清單</string>
    <string name="finish">完成</string>
    <string name="current_no_data">尚無資料</string>
    <string name="running">進行中</string>
    <string name="name">名稱</string>
    <string name="confirm_project_done">確定完成案件?</string>
    <string name="confirm">確定</string>
    <string name="complete">已完成</string>
    <string name="share_my_thought">我想說</string>
    <string name="sharing">我要分享</string>
    <string name="send_post">發佈</string>
    <string name="preparing">規劃中</string>

    <array name="dummy_items">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
    </array>

    <array name="main_items">
        <item>List - Basic Drag and Swipe</item>
        <item>Grid - Basic Swipe</item>
    </array>
</resources>