<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="project"
            type="com.eric.startupmatching.data.Project" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/center_text_font_noto"
            android:id="@+id/projectName"
            android:textSize="16sp"
            android:text="@string/project_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/half_regular_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/center_text_font_noto"
            android:id="@+id/user_name"
            android:textSize="16sp"
            android:text="@string/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectName"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/half_regular_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/center_text_font_noto"
            android:textSize="16sp"
            android:text="@string/team_name"
            app:layout_constraintStart_toEndOf="@+id/user_name"
            app:layout_constraintTop_toTopOf="@+id/user_name"
            android:layout_marginStart="@dimen/regular_margin"
            />

        <TextView
            android:id="@+id/content"
            style="@style/center_text_font_noto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/half_regular_margin"
            android:text="@string/description"
            android:gravity="start"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/check_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:layout_marginEnd="@dimen/regular_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/center_text_font_noto"
            android:id="@+id/check_btn"
            android:textSize="16sp"
            android:text="@string/check_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/projectName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/regular_margin"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/warmGrayColor"
            android:id="@+id/separate_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginEnd="@dimen/regular_margin"
            app:layout_constraintTop_toBottomOf="@+id/content"
            android:layout_marginTop="@dimen/half_regular_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>