<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="team"
            type="com.eric.startupmatching.data.Team" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/center_text_font_noto"
            android:id="@+id/team_name"
            android:textSize="16sp"
            android:text="@string/team_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/half_regular_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/center_text_font_noto"
            android:id="@+id/leader_name"
            android:textSize="16sp"
            android:text="@string/user_name"
            app:layout_constraintStart_toEndOf="@+id/team_name"
            app:layout_constraintTop_toTopOf="@+id/team_name"
            android:layout_marginStart="@dimen/regular_margin"/>

        <TextView
            android:id="@+id/content"
            style="@style/center_text_font_noto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_regular_margin"
            android:text="@string/description"
            android:gravity="start"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/regular_margin"
            app:layout_constraintEnd_toStartOf="@+id/check_btn"
            app:layout_constraintStart_toStartOf="@+id/team_name"
            app:layout_constraintTop_toBottomOf="@+id/team_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            style="@style/center_text_font_noto"
            android:id="@+id/job_hiring_recycler_view"
            android:orientation="horizontal"
            android:textSize="16sp"
            android:text="@string/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginEnd="@dimen/regular_margin"
            android:layout_marginTop="@dimen/half_regular_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/center_text_font_noto"
            android:id="@+id/check_btn"
            android:textSize="16sp"
            android:text="@string/check_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/job_hiring_recycler_view"
            android:layout_marginEnd="@dimen/regular_margin"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/warmGrayColor"
            android:id="@+id/separate_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginEnd="@dimen/regular_margin"
            app:layout_constraintTop_toBottomOf="@+id/job_hiring_recycler_view"
            android:layout_marginTop="@dimen/half_regular_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>