<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.eric.startupmatching.chat.detail.ChatRoomDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/chatroom_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/user_name"
            style="@style/center_text_font_noto"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:reverseLayout="true"
            android:id="@+id/chatroom_detail_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/chatroom_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/constraint_message_input"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_regular_margin"
            android:id="@+id/constraint_message_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/input_message"
                android:hint="@string/enter_message"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send_btn"
                android:layout_marginEnd="@dimen/regular_margin"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/send"
                android:id="@+id/send_btn"
                android:background="@drawable/round_corner_light_blue"
                android:textColor="@color/white"
                style="@style/center_text_font_noto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>