<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="chatRoom"
            type="com.eric.startupmatching.data.ChatRoom" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/half_regular_margin"
        android:paddingStart="@dimen/half_regular_margin"
        android:paddingEnd="@dimen/half_regular_margin"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chat_room_main_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/user_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                style="@style/center_text_font_noto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/regular_margin"
                android:text="@string/user_name"
                app:layout_constraintStart_toEndOf="@id/user_icon"
                app:layout_constraintTop_toTopOf="@+id/user_icon" />

            <TextView
                android:id="@+id/last_message"
                style="@style/center_text_font_noto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/regular_margin"
                android:text="@string/message"
                app:layout_constraintBottom_toBottomOf="@+id/user_icon"
                app:layout_constraintStart_toEndOf="@id/user_icon" />

            <TextView
                android:id="@+id/message_time"
                style="@style/center_text_font_noto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/regular_margin"
                android:text="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/warmGrayColor"
                android:id="@+id/separate_line"
                app:layout_constraintTop_toBottomOf="@+id/user_icon"
                android:layout_marginTop="@dimen/half_regular_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>